fix-index page sidebar alignment issue

--- a/styles.css
+++ b/styles.css
@@ -115,9 +115,9 @@ aside {
   z-index: 1000;
   position: absolute;
   left: -10px;
-  bottom: 0px;
-  height: 33px;
-  width: 3px;
+  bottom: -5px;
+  height: 150%;
+  width: 2.5px;
 }
 
 .menu .col:hover:after {
@@ -131,12 +131,12 @@ aside {
 }
 .menu .col > a {
   display: flex;
-  align-content: center;
+  align-items: center;
 }
 .menu .col > a > img {
   width: 20px;
   height: 20px;
-  margin-right: 1rem;
+  margin-right: 20px;
 }
 .menu i {
   padding-right: 20px;
